<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnMore"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginVertical="@dimen/margin_large"
        android:background="@drawable/bg_click_button"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/padding_large"
        android:src="@drawable/icon_more"
        app:layout_constraintBottom_toBottomOf="@id/llEmploymentStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/llEmploymentStatus" />

    <LinearLayout
        android:id="@+id/llEmploymentStatus"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginVertical="@dimen/margin_large"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_free"
            android:gravity="center"
            android:padding="@dimen/padding_standard"
            android:text="@string/free"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_standard_size" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_busy"
            android:gravity="center"
            android:padding="@dimen/padding_standard"
            android:text="@string/busy"
            android:textColor="@color/tv_busy_color"
            android:textSize="@dimen/tv_standard_size" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginVertical="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="@id/llEmploymentStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/llEmploymentStatus">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnNotification"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/bg_click_button"
            android:padding="@dimen/padding_middle"
            android:src="@drawable/icon_notification" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_red_oval"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_extra_small" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnSpark"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginVertical="@dimen/margin_large_large"
        android:background="@drawable/bg_click_button"
        android:padding="@dimen/padding_middle"
        android:src="@drawable/icon_spark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMore" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSpark">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnZoomin"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_small"
            android:background="@drawable/bg_click_button"
            android:padding="@dimen/padding_large"
            android:src="@drawable/icon_plus" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnZoomout"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_standard"
            android:background="@drawable/bg_click_button"
            android:padding="@dimen/padding_large"
            android:src="@drawable/icon_minus" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnMyLocation"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_standard"
            android:background="@drawable/bg_click_button"
            android:padding="@dimen/padding_large"
            android:src="@drawable/icon_airplane" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:indeterminate="true"
        android:indeterminateTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llInfo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_small"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_standard"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="0:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="104dp"
            android:layout_height="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnOrders"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_info_button"
                    android:padding="@dimen/padding_large"
                    android:src="@drawable/icon_orders" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/orders"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_standard"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_large_middle"
                android:background="@drawable/bg_red_oval"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="104dp"
            android:layout_height="80dp"
            >

            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnCurb"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_info_button"
                    android:padding="@dimen/padding_large"
                    android:src="@drawable/icon_rocket" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/curb"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_standard"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="104dp"
            android:layout_height="80dp"
            >

            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnRates"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="@drawable/bg_info_button"
                    android:padding="@dimen/padding_large"
                    android:src="@drawable/icon_rates" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rates"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_standard"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>